--- a/Actividad/Actividad/landing_figma.html
+++ b/Actividad/Actividad/landing_figma.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <!--Sección 1: Header-->
-    <nav class="navbar navbar-expand-lg bg-body-tertiary me-5">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary me-6">
             <div class="container-fluid">
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -41,7 +41,7 @@
       </div>     
     </div>
 
-     <!--Sección 3: feature o características-->
+     <!--Sección 3: feature o características las 3 cards-->
      <div class="wrapper-2">
       <div class="card-group">
         <div class="card border-0" >
@@ -74,18 +74,64 @@
       <div class="mx-5">
         <h3>FEATURE CONTENT</h3>
         <p class="mx-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec euismod leo a nibh dignissim tincidunt. Nam ultricies odio ac neque suscipit volutpat. Ut dictum adipiscing felis sed malesuada. Número entero porta sem nec nibh hendrerit imperdiet</p>
+        <div class="hero-img-2">
+        </div>
      </div>
-      <div class="hero-img-2">
-        <p class="icon1"></p>
+      
      </div>
     </div>
 
      <!--Sección 5: second content-->
+
      <div class="d-flex justify-content-between mt-5 mx-5" style="width: 100%;">
+      <div class="container mt-5">
+          <div class="row">
+              <div class="col-md-6">
+                  <div class="card card-custom card-background1">
+                      <div class="left-col">
+                          <div class="difuminado d-flex align-items-center">
+                              <div class="texto">
+                                  <h5 class="text-center mb-3">Aquí el título</h5>
+                                  <p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam
+                                      quibusdam quos eligendi! Architecto ratione aspernatur sit deleniti autem odio
+                                      exercitationem.</p>
+                                  <a href="#" class="btn btn-outline-info mt-4">Botón</a>
+                              </div>
+                          </div>
+                      </div>
+                      <div class="right-col">
+                          <div class="vacio">
+                          </div>
+                      </div>
+                  </div>
+              </div>
+              <div class="col-md-6">
+                  <div class="card card-custom card-background">
+                      <div class="left-col">
+                          <div class="difuminado d-flex align-items-center">
+                              <div class="texto">
+                                  <h5 class="text-center mb-3">Aquí el título</h5>
+                                  <p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam
+                                      quibusdam quos eligendi! Architecto ratione aspernatur sit deleniti autem odio
+                                      exercitationem.</p>
+                                  <a href="#" class="btn btn-outline-info  mt-4">Botón</a>
+                              </div>
+                          </div>
+                      </div>
+                      <div class="right-col">
+                          <div class="vacio">
+                          </div>
+                      </div>
+                  </div>
+              </div>
+          </div>
+      </div>
+  </div>
+     <!-- <div class="d-flex justify-content-between mt-5 mx-5" style="width: 100%;">
       <div class="card" style="max-width: 100%; position: relative;">
-        <img src="assets/img/S4_computer_closeup.png" class="img-fluid rounded-end" alt="...">
+       <div class="">
           <div class="row g-0 h-100">
-                  <div class="card-body">
+                  <div class="card-body texto">
                       <h5 class="card-title">FIRST CARD CONTENT</h5>
                       <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec euismod leo a nibh dignissim tincidunt nam.</p>
                       <a href="#" class="btn btn-outline-info">View more</a>
@@ -101,9 +147,10 @@
                       <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec euismod leo a nibh dignissim tincidunt nam.</p>
                       <a href="#" class="btn btn-outline-info">View more</a>
                   </div>
+                </div>
           </div>
       </div>
-  </div> 
+  </div>  -->
 
      <!-- <div>
         <title>SECONDARY CONTENT</title> 
@@ -126,29 +173,29 @@
       </div>
       <!--Sección 7: Footer-->
       <footer style="background-color: lightgray; padding: 20px;">
-        <div style="margin: 0 30px;">
+        <div style="margin: 30px;">
             <p style="margin-bottom: 20px;">Copyright 2014 CompanyName. All rights reserved.</p>
-            <div style="display: flex; justify-content: space-between; margin-top: 10px;">
+            <div style="display: flex; justify-content: space-between;">
                 <a href="https://www.figma.com/design/szmeZdnpwrlJJq8ZEwtoQq/Landing-Page-UX-UI?node-id=0-1&t=IMYzU1MiKu8giu3k-1" target="_blank">Terms of Service</a>
                 <a href="https://www.figma.com/design/szmeZdnpwrlJJq8ZEwtoQq/Landing-Page-UX-UI?node-id=0-1&t=IMYzU1MiKu8giu3k-1" target="_blank">Privacy</a>
             </div>
         </div>
         <div style="display: flex; justify-content: flex-end; margin: 0 20px;">
-            <div style="margin-left: 20px;">
+            <div style="margin-left: 50px;">
                 <h6>COMPANY</h6>
                 <a href="URL" target="_self">About us</a><br>
                 <a href="URL" target="_self">Meet the team</a><br>
                 <a href="URL" target="_self">What we do</a><br>
                 <a href="URL" target="_self">Careers</a>
             </div>
-            <div style="margin-left: 20px;">
+            <div style="margin-left: 50px;">
                 <h6>COMPANY 2</h6>
                 <a href="URL" target="_self">About us</a><br>
                 <a href="URL" target="_self">Meet the team</a><br>
                 <a href="URL" target="_self">What we do</a><br>
                 <a href="URL" target="_self">Careers</a>
             </div>
-            <div style="margin-left: 20px;">
+            <div style="margin-right: 50px; margin-left: 50px;">
                 <h6>COMPANY 3</h6>
                 <a href="URL" target="_self">About us</a><br>
                 <a href="URL" target="_self">Meet the team</a><br>
